k8s/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: contactme
spec:
  replicas: 2
  serviceName: contactme
  selector:
    matchLabels:
      run: contactme
  template:
    metadata:
      labels:
        run: contactme
    spec:
      containers:
        - name: contactme
          image: docker.pkg.github.com/jakemakesstuff/contactme/app:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: github
