k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: contactme
  labels:
    run: contactme
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: contactme
