k8s/ingress.template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contactme-web-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - contact.jakegealer.me
      secretName: contactme-web-ingress
  rules:
    - host: contact.jakegealer.me
      http:
        paths:
          - path: /
            backend:
              serviceName: contactme
              servicePort: 8080
